# cs32f103-bluepill-quickstart

./: .mxproject  CMakeLists.txt  Makefile  README.md  arm-none-eabi-gcc.cmake  cs32f103-bluepill-quickstart.ioc  openocd.cfg  openocd.gdb
Core/Src/: main.c
